Добавил кнопку действия

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <main class="container">
 
             <section class="gallery">
-
                 <div class="gallery__slide-window gallery__slide-window_big-row">
                     <div class="gallery__slider">
                         <ul class="gallery__list">
@@ -56,7 +55,6 @@
                         </ul>
                     </div>
                 </div>
-
                 <div class="gallery__slide-window gallery__slide-window_middle-row">
                     <div class="gallery__slider">
                         <ul class="gallery__list">
@@ -168,6 +166,11 @@
                         </ul>
                     </div>
                 </div>
+            </section>
+            <section class="action-button">
+                <form action="" class="action-button__form">
+                    <button class="action-button__button">КЛИКЛАК</button>
+                </form>
             </section>
         </main>
     </page>
